got rid of a redundant horizontal scrollbar and fixed a css mistake.

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -1665,12 +1665,17 @@ legend {
 	border-bottom: 1px solid #ddd;
 }
 
+#scrollareastatistics {
+	overflow-x: hidden !important;
+}
+
 .scrollarea {
 	height: 300px;
 	width: 90%;
 	overflow-y: auto;	
-	overflow-x: auto;	
+	overflow-x: auto;
 }
+
 
 #contentstable2 .answercell {
 	width: 150px;
